# aloha-a2a

./: .gitignore  AGENTS.md  CLAUDE.md  MCP vs A2A.md  PORT_CONFIGURATION.md  README.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: code-quality.yml  continuous-integration.yml  enable-automerge.yml
aloha-csharp/: .gitignore  Aloha.A2A.sln  IMPLEMENTATION.md  README.md
aloha-csharp/Agent/: .env.example  A2AModels.cs  Agent.csproj  DiceAgent.cs  DiceAgentExecutor.cs  Program.cs  RestTransportHandler.cs  Tools.cs
aloha-csharp/Client/: A2AModels.cs  Client.csproj  JsonRpcClient.cs  Program.cs  RestClient.cs
aloha-csharp/Host/: .gitkeep  A2AModels.cs  Host.csproj  JsonRpcClient.cs  Program.cs  RestClient.cs
aloha-csharp/Server/: .gitkeep  A2AModels.cs  AlohaServer.cs  DiceAgentExecutor.cs  FileLoggerProvider.cs  Program.cs  RestTransportHandler.cs  Server.csproj  Tools.cs  appsettings.json
aloha-csharp/scripts/: build  build.bat
aloha-go/: .env.example  .gitignore  IMPLEMENTATION.md  README.md  go.mod  go.sum  test.sh
aloha-go/agent/: README.md  agent.go  executor.go
aloha-go/client/: README.md  client.go  logger.go  main.go  rest_client.go
aloha-go/host/: .gitkeep  README.md  client.go  main.go
aloha-go/scripts/: build  build.bat
aloha-java/: README.md  TEST_RESULTS.md  pom.xml
aloha-js/: .gitignore  README.md
aloha-log/: .gitignore
aloha-python/: .gitignore  README.md
aloha-python/host/: __init__.py  __main__.py  client.py  pyproject.toml
aloha-python/server/: .env.example  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml  tools.py
aloha-python/server/scripts/: grpc_server  grpc_server.bat  jsonrpc_server  jsonrpc_server.bat  rest_server  rest_server.bat
(+171 files in other folders)
